# yz-musetalk

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  manifest.json  pyproject.toml
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/scripts/: install-to-frontend.mjs
ui/src/: App.tsx  V12Dashboard.tsx  index.ts  store.ts  types.ts
ui/src/components/: AudioDropZone.tsx  MuseTalkRefsDialog.tsx  PhotorealFace.tsx  TextInputCard.tsx
ui/src/lib/: api.ts  capabilities.tsx  store-context.tsx  ws.tsx
wrapper/: bench_ws.py  main.py
wrapper/static/: index.html
wrapper/static/assets/: index-8wRaz7Gd.js  index-B6R8y0ja.js  index-BzZKgJ8D.js
yz_musetalk_client/: __init__.py  client.py  routes.py
